Fix gallery card width on small devices

--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -268,8 +268,8 @@
 }
 
 .galery-card {
-  min-width: 20%;
-  max-width: 50%;
+  min-width: 164px;
+  max-width: 512px;
   margin-bottom: 1rem !important;
 }
 
